# Chess-engine

./: .clang-format  .editorconfig  .gitignore  Authors  CMakeLists.txt  LICENSE  Makefile  README.md  main
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BUILD.md  CODING_STYLE.md  CONTRIBUTING.md  Doxyfile  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md
examples/: CMakeLists.txt  README.md
include/: README.md  engine.h  evaluate.h  movegen.h  parsing.h  search.h  threadPool.h  tools.h  transposition.h  updateBoard.h  utils.h  zobrist.h
src/: README.md  Validation.cpp  engine.cpp  evalorig.cpp  evaluate.cpp  main  main.cpp  movegen.cpp  parsing.cpp  search.cpp  tools.cpp  updateBoard.cpp  zobrist.cpp
tests/: CMakeLists.txt  README.md
tools/: README.md  build.sh  clean.sh
