# Examples CMakeLists.txt
# This will contain example programs demonstrating various features

# Uncomment when ready to add examples
# add_executable(basic_game examples/basic_game.cpp)
# target_link_libraries(basic_game chess_engine_lib)

# add_executable(move_generator_demo examples/move_generator_demo.cpp)
# target_link_libraries(move_generator_demo chess_engine_lib)

# add_executable(position_evaluation examples/position_evaluation.cpp)
# target_link_libraries(position_evaluation chess_engine_lib)
