# Tests CMakeLists.txt
# This will be populated as test files are created

# Uncomment when ready to add tests
# Include Google Test or another testing framework
# find_package(GTest REQUIRED)
# include_directories(${GTEST_INCLUDE_DIRS})

# Unit tests
# add_executable(unit_tests
#     unit/board_test.cpp
#     unit/move_generator_test.cpp
#     unit/evaluator_test.cpp
#     unit/search_test.cpp
# )
# target_link_libraries(unit_tests ${GTEST_LIBRARIES} pthread chess_engine_lib)
# add_test(NAME UnitTests COMMAND unit_tests)

# Integration tests
# add_executable(integration_tests
#     integration/game_test.cpp
#     integration/uci_test.cpp
# )
# target_link_libraries(integration_tests ${GTEST_LIBRARIES} pthread chess_engine_lib)
# add_test(NAME IntegrationTests COMMAND integration_tests)
